# turtlebot3_machine_learning

./: .gitignore  .travis.yml  README.md  turtlebot3_machine_learning_ci.repos
.github/workflows/: ros-ci.yml
docker_setup/: Dockerfile  docker-compose.yml  docker_start_container.sh  startup.sh
docker_setup/scripts/: start.sh  start_ros.sh
turtlebot3_dqn/: CHANGELOG.rst  CMakeLists.txt  data.csv  frl_ep_10_round_10.csv  frl_ep_6_round_10.csv  package.xml  setup.cfg  setup.py  single_ep_100.csv  single_ep_60.csv  test.py
turtlebot3_dqn/launch/: client_1_local_train.launch  client_2_local_train.launch  client_3_local_train.launch  client_4_local_train.launch  client_local_train.launch  result_graph.launch  rl_local_train_on_stage_1.launch  rl_local_train_on_stage_2.launch  rl_local_train_on_stage_3.launch  rl_local_train_on_stage_4.launch  test_client_1_local_train.launch  test_trained_model.launch  test_trained_model_on_stage_2.launch  test_trained_model_on_stage_3.launch  test_trained_model_on_stage_4.launch  turtlebot3_dqn.launch  turtlebot3_dqn_stage1.launch.py  turtlebot3_dqn_stage2.launch.py  turtlebot3_dqn_stage3.launch.py  turtlebot3_dqn_stage4.launch.py  turtlebot3_dqn_stage_1.launch  turtlebot3_dqn_stage_2.launch  turtlebot3_dqn_stage_3.launch  turtlebot3_dqn_stage_4.launch  turtlebot3_environment.launch  turtlebot3_results.launch.py
turtlebot3_dqn/model/: stage1_episode10.h5  stage2_episode10.h5  stage3_episode10.h5  stage3_episode10.json  stage4_episode10.h5
turtlebot3_dqn/nodes/: action_graph  client_1_local_train.py  client_2_local_train.py  client_local_train.py  combination_obstacle_1.py  combination_obstacle_2.py  hindsight_experience_replay.py  moving_obstacle.py  plot_all_in_one.py  plot_results.py  plot_reward.py  result_graph  rl_local_train.py  save_result.py  test_client_1_local_train.py  test_trained_model.py  turtlebot3_dqn  turtlebot3_dqn.py  turtlebot3_dqn_her  turtlebot3_dqn_her.py  turtlebot3_dqn_stage_1  turtlebot3_dqn_stage_2  turtlebot3_dqn_stage_3  turtlebot3_dqn_stage_4  upload_model.py
turtlebot3_dqn/nodes/utils/: database_connection.py  log_utils.py  logging_script.py
turtlebot3_dqn/save_model/: stage_1_10.h5  stage_1_10.json  stage_2_10.h5  stage_3_10.h5  stage_3_10.json  stage_4_10.h5  stage_4_10.json
turtlebot3_dqn/saved_model/: model1.h5  model1.json  stage1_episode600.h5  stage1_episode600.json
turtlebot3_dqn/src/turtlebot3_dqn/: environment_stage_1.py  environment_stage_2.py  environment_stage_3.py  environment_stage_4.py  environment_stage_test.py  respawnGoal.py
turtlebot3_dqn/srv/: C2SPtModel.srv  LocalTrain.srv  PtModel.srv  S2CPtModel.srv
turtlebot3_dqn/turtlebot3_dqn/: action_graph.py  dqn_agent.py  dqn_environment.py  dqn_gazebo.py  dqn_test.py  result_graph.py
turtlebot3_dqn/turtlebot3_dqn/dqn_agent/: dqn_agent.py
turtlebot3_dqn/turtlebot3_dqn/dqn_environment/: dqn_environment.py
turtlebot3_dqn/turtlebot3_dqn/dqn_gazebo/: dqn_gazebo.py
turtlebot3_dqn/turtlebot3_dqn/dqn_test/: dqn_test.py
turtlebot3_dqn/turtlebot3_dqn/utils/: action_graph.py  result_graph.py
turtlebot3_machine_learning/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
