<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_dqn</name>
  <version>1.0.1</version>
  <description>
    The turtlebot3_dqn package using reinforcement learning with DQN (Deep Q-Learning).
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/turtlebot3_machine_learning</url>
  <url type="website">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_machine_learning</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_machine_learning/issues</url>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author email="dddoggi1207@gmail.com">ChanHyeong Lee</author>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>turtlebot3_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>python3-tensorflow==2.19.0</exec_depend>
  <exec_depend>python3-keras==3.9.2</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
