<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_dqn</name>
  <version>1.0.1</version>
  <description>
    The turtlebot3_dqn package using reinforcement learning with DQN (Deep Q-Learning).
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_machine_learning</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_machine_learning/issues</url>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author email="dddoggi1207@gmail.com">ChanHyeong Lee</author>
  <exec_depend>python3-pip</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python-tensorflow-pip</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-pyqtgraph</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>turtlebot3_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
