<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_machine_learning</name>
  <version>1.0.1</version>
  <description>
    This metapackage for ROS 2 TurtleBot3 machine learning.
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_machine_learning</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_machine_learning/issues</url>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author email="dddoggi1207@gmail.com">ChanHyeong Lee</author>
  <exec_depend>turtlebot3_dqn</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
